# blueprint-takeoff

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/core/: CoordinateTransform.cpp  CoordinateTransform.h  MathUtils.cpp  MathUtils.h  PdfRenderer.cpp  PdfRenderer.h  ProjectDatabase.cpp  ProjectDatabase.h  QuoteCalculator.cpp  QuoteCalculator.h  ShapesDatabase.cpp  ShapesDatabase.h
src/models/: Calibration.cpp  Calibration.h  Measurement.cpp  Measurement.h  Page.cpp  Page.h  Project.cpp  Project.h  TakeoffItem.cpp  TakeoffItem.h
src/ui/: BlueprintView.cpp  BlueprintView.h  MainWindow.cpp  MainWindow.h  MeasurementPanel.cpp  MeasurementPanel.h  PagesPanel.cpp  PagesPanel.h  PdfImportDialog.cpp  PdfImportDialog.h  PropertiesDock.cpp  PropertiesDock.h  QuoteDock.cpp  QuoteDock.h  ShapePickerDialog.cpp  ShapePickerDialog.h  UndoCommands.cpp  UndoCommands.h
